--- a/templates/home.html
+++ b/templates/home.html
@@ -37,9 +37,15 @@
         <div class="col-md-4 mb-4">
             <div class="card h-100">
                 {% if homestay.image_path %}
-                <img src="{{ url_for('static', filename=homestay.image_path) }}" class="card-img-top" alt="{{ homestay.title }}" style="height: 200px; object-fit: cover;">
+                <div style="position: relative; width: 100%; padding-bottom: 56.25%;">
+                    <img src="{{ url_for('static', filename=homestay.image_path) }}" class="card-img-top" alt="{{ homestay.title }}" 
+                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
+                </div>
                 {% else %}
-                <img src="{{ url_for('static', filename='images/default-homestay.jpg') }}" class="card-img-top" alt="Default Image" style="height: 200px; object-fit: cover;">
+                <div style="position: relative; width: 100%; padding-bottom: 56.25%;">
+                    <img src="{{ url_for('static', filename='images/default-homestay.jpg') }}" class="card-img-top" alt="Default Image"
+                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
+                </div>
                 {% endif %}
                 <div class="card-body">
                     <h5 class="card-title">{{ homestay.title }}</h5>
