--- a/templates/renter/view_room_detail.html
+++ b/templates/renter/view_room_detail.html
@@ -123,6 +123,7 @@
     </div>
 </div>
 
+<!-- ✅ Khối JavaScript đã tách Jinja -->
 <!-- Fullscreen Modal for Gallery -->
 <div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-fullscreen">
