--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
-{% block title %}Login - Homestay Booking{% endblock %}
+{% block title %}<span data-translate="login">Login</span> - <span data-translate="homestay-booking">Homestay Booking</span>{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
   <div class="col-md-5">
     <div class="card">
       <div class="card-header">
-        <h4>Login to Your Account</h4>
+        <h4 data-translate="login-to-account">Login to Your Account</h4>
       </div>
       <div class="card-body">
         <form method="post" autocomplete="off">
@@ -16,7 +16,7 @@
           
           <!-- Username/Email -->
           <div class="mb-3">
-            <label for="login_username" class="form-label">Username or Email</label>
+            <label for="login_username" class="form-label" data-translate="username-or-email">Username or Email</label>
             <input type="text" 
                    name="username" 
                    id="login_username" 
@@ -29,7 +29,7 @@
           
           <!-- Password -->
           <div class="mb-3">
-            <label for="login_password" class="form-label">Password</label>
+            <label for="login_password" class="form-label" data-translate="password">Password</label>
             <input type="password" 
                    name="password" 
                    id="login_password" 
@@ -46,17 +46,17 @@
                    id="remember" 
                    class="form-check-input"
             >
-            <label for="remember" class="form-check-label">Remember me</label>
+            <label for="remember" class="form-check-label" data-translate="remember-me">Remember me</label>
           </div>
           
           <!-- Submit -->
-          <button type="submit" class="btn btn-primary w-100">Login</button>
+          <button type="submit" class="btn btn-primary w-100" data-translate="login">Login</button>
         </form>
         
         <!-- Social login buttons -->
         <div class="text-center mt-3">
           <div class="separator my-3">
-            <span class="px-2 text-muted">OR</span>
+            <span class="px-2 text-muted" data-translate="or">OR</span>
           </div>
           
           <!-- Facebook login button -->
@@ -64,7 +64,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="white" class="social-icon">
               <path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"/>
             </svg>
-            <span>Login with Facebook</span>
+            <span data-translate="login-with-facebook">Login with Facebook</span>
           </a>
 
           <!-- Google login button -->
@@ -72,12 +72,12 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="white" class="social-icon">
               <path d="M12.545,10.239v3.821h5.445c-0.712,2.315-2.647,3.972-5.445,3.972c-3.332,0-6.033-2.701-6.033-6.032s2.701-6.032,6.033-6.032c1.498,0,2.866,0.549,3.921,1.453l2.814-2.814C17.503,2.988,15.139,2,12.545,2C7.021,2,2.543,6.477,2.543,12s4.478,10,10.002,10c8.396,0,10.249-7.85,9.426-11.748L12.545,10.239z"/>
             </svg>
-            <span>Login with Google</span>
+            <span data-translate="login-with-google">Login with Google</span>
           </a>
         </div>
       </div>
       <div class="card-footer text-center">
-        Don't have an account? <a href="{{ url_for('auth.register') }}">Register</a>
+        <span data-translate="no-account">Don't have an account?</span> <a href="{{ url_for('auth.register') }}" data-translate="register">Register</a>
       </div>
     </div>
   </div>
